@@ -44,6 +44,10 @@ Version 1.7.2
        file if sorted. (Stefan)
 - BUG: Issue #137: overlays don't propagate from
        externals to their parent folders. (Stefan)
+- BUG: Issue #141: Inline diff shown for
+       ignored whitespace lines. (Stefan)
+- BUG: Issue #142: Crash in TMerge on
+       doubleclick. (Stefan)
 
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
